build/log/idf_py_stderr_output_17516
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'app_main':
/home/pi/wifiRelay_2/main/wifiRelay.c:545:5: error: implicit declaration of function 'wifi_config_from_nvs'; did you mean 'wifi_connect_from_nvs'? [-Wimplicit-function-declaration]
  545 |     wifi_config_from_nvs();///added
      |     ^~~~~~~~~~~~~~~~~~~~
      |     wifi_connect_from_nvs
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'wifi_connect_from_nvs':
/home/pi/wifiRelay_2/main/wifiRelay.c:554:4: error: expected declaration or statement at end of input
  554 |    }
      |    ^
/home/pi/wifiRelay_2/main/wifiRelay.c: At top level:
/home/pi/wifiRelay_2/main/wifiRelay.c:539:6: warning: 'app_main' defined but not used [-Wunused-function]
  539 | void app_main(void) {
      |      ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
